--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,37 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Title</title>
+    <title>Groovy Contacts App</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
     <div class="container">
-      <h1>My Site Title</h1>
+      <h1>Everyone I Know App</h1>
+
+
+        <!-- Button that will make the add new person form appear -->
+       <a href="#" class="button radius">Add Somebody</a>
+
+        <!-- Right here we need a form that appears when needed -->
+        <!-- The form needs a submit button that disappears it -->
+<!-- Simple form which will send a POST request -->
+       <form action="#" method="post">
+         <input type="text" name="firstName" value="First Name" required>
+         <input type="text" name="lastName" value="Last Name" required>
+         <input type="text" name="nickName" value="Nickname">
+         <input type="tel" name="cellNumber" value="Cell Number" required>
+         <input type="tel" name="homeNumber" value="Home Number">
+         <input type="email" name="email" value="Email" required>
+         <input type="twitter" name="twitter" value="Twitter Handle">
+         <input type="url" name="photoURL" value="Picture Link">
+         <input type="submit" value="New Contact">
+        </form>
+
+        <!-- Here we'll need a new div for each new friend BUT... -->
+        <!-- I want to use the "make div" append approach from the movie div project -->
+
+
     </div>
 
     <script src="js/main.js"></script>
