Changes to index.html and main.js - working on POST functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="container">
       <div>
-        <h1>Everyone I Know App</h1>
-        <form class="form-inline" action="#">
+        <h1>Groovy Contacts List</h1>
+        <form class="form-inline">
           <input type="text" id="contactName" placeholder="Name">
           <input type="tel" id="phoneNumber" placeholder="Phone Number">
           <input type="email" id="email" placeholder="Email">
