--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
       </div>
     </div>
   <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
