--- a/public/index.html
+++ b/public/index.html
@@ -10,28 +10,39 @@
   <body>
     <div class="container">
       <div>
-        <h1>Groovy Contacts List</h1>
-        <form class="form-inline">
-          <input type="text" id="contactName" placeholder="Name">
-          <input type="tel" id="phoneNumber" placeholder="Phone Number">
-          <input type="email" id="email" placeholder="Email">
-          <input type="text" id="twitter" placeholder="Twitter Handle">
-          <input type="url" id="photoUrl" placeholder="Picture Link">
-          <button id="addNew">Add Contact</button>
+        <div>
+          <form>
+            <input class="button newContact" value="New Contact">
+          </form>
+        </div>
+
+        <form class="contacts-form" action="https://groovyaddressapp.firebaseio.com/contacts.json" method="POST">
+          <input type="text" class="contactName" placeholder="Name">
+          <input type="tel" class="phoneNumber" placeholder="Phone Number">
+          <input type="email" class="email" placeholder="Email">
+          <input type="text" class="twitter" placeholder="Twitter Handle">
+          <input type="url" class="photoUrl" placeholder="Picture Link">
+          <input id="submit" class="button addContact" value="Add Contact">
         </form>
         <div>
           <table id="table">
-            <th>Contact</th>
-            <th>Phone Number</th>
-            <th>Email</th>
-            <th>Twitter Handle</th>
-            <th>Picture</th>
-            <th>Remove?</th>
-          </table>
+            <thead>
+              <tr>
+                <th></th>
+                <th>Contact</th>
+                <th>Phone Number</th>
+                <th>Email</th>
+                <th>Twitter Handle</th>
+                <th></th>
+              </thead>
+              <tbody class="target">
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
-    </div>
-  <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
-  <script src="js/main.js"></script>
-</body>
+    <script src="//cdn.jsdelivr.net/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../bower_components/lodash/lodash.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
